<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center_horizontal"
    android:padding="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textColor="#4099ff"
        android:textSize="20sp"
        android:text="@string/photo_prompt"
        android:gravity="center"/>

        <LinearLayout
            android:id="@+id/LinearLayout01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_marginTop="20dp">

            <Button
                android:layout_height="wrap_content"
                android:id="@+id/photo_caption_button"
                android:text="@string/photo_caption"
                android:layout_gravity="center"
                android:textSize="20sp"
                android:padding="5dp"
                android:layout_width="wrap_content"
                style="@style/btn_white_large"/>

            <Button
                android:layout_marginTop="20dp"
                android:layout_height="wrap_content"
                android:id="@+id/gallery_selection_button"
                android:text="@string/gallery_prompt"
                android:layout_gravity="center"
                android:textSize="20sp"
                android:padding="5dp"
                android:layout_width="wrap_content"
                style="@style/btn_white_large"/>

        </LinearLayout>

</LinearLayout>
