<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center_horizontal"
    android:padding="20dp">

    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:src="@drawable/ic_gps_off_white_48dp"/>

    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"
        android:textColor="#4099ff"
        android:text="@string/gps_prompt"
        android:gravity="center"/>

    <LinearLayout
        android:id="@+id/LinearLayout01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <Button
            android:layout_height="wrap_content"
            android:id="@+id/gps_set_button"
            android:text="@string/open_gps"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            style="@style/btn_white_large"
            android:textSize="20sp"/>

        <Button
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content"
            android:id="@+id/cancel"
            android:text="@string/cancel"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:textSize="20sp"
            style="@style/btn_white_large"/>

    </LinearLayout>

</LinearLayout>
